# synapxia

./: .env.template  .gitignore  AGENTS.md  API.md  CLAUDE.md  Dockerfile  Makefile  README.md  SECURITY_DEPLOYMENT.md  Services Evaluated.md  docker-compose.yml  vercel.env.example
api/: .dockerignore  .env.example  AGENTS.md  AUTH.md  CLAUDE.md  Dockerfile  alembic.ini  hash_password.py  index.py  main.py  pyproject.toml  requirements.txt  runtime.txt  vercel.json
api/app/: main.py
api/app/admin/: __init__.py
api/app/admin/internal/: __init__.py  dependencies.py  models.py
api/app/admin/routes/: __init__.py  business_units.py  health.py  item_translations.py  list_items.py  lists.py  modules.py  options.py  privileges.py  profiles.py  roles.py  units.py  users.py
api/app/auth/: __init__.py  models.py  routes.py  schemas.py
api/app/catalog/: __init__.py
api/app/catalog/internal/: models.py
api/app/catalog/routes/: actions.py  asset_relations.py  assets.py  categories.py  characteristics.py  characterizations.py  favorites.py  features.py
api/app/collab/: __init__.py
api/app/collab/internal/: __init__.py  dependencies.py  models.py
api/app/collab/routes/: __init__.py  assignments.py  dimensions.py  metrics.py  projects.py  roles.py  teams.py
api/app/core/: config.py
api/app/genai/: __init__.py
api/app/genai/internal/: __init__.py  dependencies.py  models.py
api/app/genai/routes/: __init__.py
api/app/inits/: __init__.py
api/app/inits/internal/: __init__.py  dependencies.py  models.py
api/app/inits/routes/: __init__.py  criterias.py
api/app/insights/: __init__.py
api/app/insights/internal/: __init__.py  dependencies.py  models.py
api/app/insights/routes/: __init__.py
api/app/internal/: __init__.py  dependencies.py  models.py  permissions.py  responses.py  schemas.py
api/app/lib/: __init__.py
api/app/lib/internal/: __init__.py  actions_service.py  dependencies.py  models.py  modify_service.py  (+4 more)
api/app/mail/: __init__.py  config.py  service.py
api/app/routers/: __init__.py  admin.py  list_items.py  lists.py  modules.py  roles.py
api/app/support/: __init__.py
api/app/taxo/: __init__.py
api/app/workflows/: __init__.py
api/migrations/: env.py
api/migrations/versions/: 0001_baseline.py  0002_add_is_verified_column.py
api/tests/: conftest.py  test_admin.py  test_assets_access.py  test_auth.py  test_categories.py  test_collab.py  test_health.py  test_lib.py  test_lib_access_enforcement.py  test_lib_characterizations.py  test_lib_foro.py  test_lib_history.py  test_lib_modify.py  test_lib_notifications.py  test_lib_permissions.py  test_lib_propose.py  test_lib_relations.py  test_lib_review.py  test_lib_versioning.py  test_lib_votes.py  test_response_envelope.py  test_support_reports.py  test_users.py
(+370 files in other folders)
