[project]
name = "synapxia-api"
version = "0.1.0"
description = "SynapxIA backend managed with uv"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "psycopg2-binary",
    "python-dotenv",
    "sqlmodel>=0.0.27",
    "fastapi-users[sqlalchemy]>=12.1.0",
    "python-multipart",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
]
