[project]
name = "synapxia-api"
version = "0.1.0"
description = "SynapxIA backend managed with uv"
readme = "../README.md"
requires-python = ">=3.15"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "psycopg2-binary",
    "python-dotenv",
    "sqlmodel>=0.0.27",
    "fastapi-users[sqlalchemy]>=13.0.0,<14",
    "python-multipart",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "mangum>=0.17.0",
    # Phase 2: FastAPI plugins adoption
    "fastapi-mail>=1.4.1,<2",
    "pydantic-settings>=2.13.0,<3",
    "jinja2>=3.1.0",
    "alembic>=1.18.0,<2",
    "asyncpg>=0.29.0,<1",
    "aiosqlite>=0.20.0",  # For async SQLite in tests
    # Dev / quality tooling (installed in the container; gated by make lint/fmt/pytest)
    "ruff>=0.4",
    "black>=24.0",
    "isort>=5.13",
    "mypy>=1.10",
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-asyncio>=0.23",
]

[tool.ruff]
line-length = 100
target-version = "py315"
select = ["E", "F", "I", "B", "UP"]

[tool.black]
line-length = 100
target-version = ["py315"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.15"
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
